added Global Style Variations, google fonts, block patterns, fixed footer spacing

--- a/parts/single-content.html
+++ b/parts/single-content.html
@@ -86,7 +86,11 @@
 <!-- wp:spacer {"height":"67px"} -->
 <div style="height:67px" aria-hidden="true" class="wp-block-spacer"></div>
 <!-- /wp:spacer -->
+<!-- wp:group {"layout":{"inherit":true},"className":"gutena-post-comment-container"} -->
+<div class="wp-block-group gutena-post-comment-container">
 <!-- wp:post-comments /-->
+</div>
+<!-- /wp:group -->
 <!-- wp:spacer {"height":"100px"} -->
 <div style="height:100px" aria-hidden="true" class="wp-block-spacer"></div>
 <!-- /wp:spacer -->
