Added Meta Box Post theme color, register various styles, update template-parts

--- a/parts/single-content.html
+++ b/parts/single-content.html
@@ -1,12 +1,17 @@
-<!-- wp:group -->
+<!-- wp:group {"layout":{"inherit":true}} -->
 <div class="wp-block-group">
-<!-- wp:spacer {"height":"50px"} -->
-<div style="height:50px" aria-hidden="true" class="wp-block-spacer"></div>
-<!-- /wp:spacer -->
 
-<!-- wp:group {"align":"full","layout":{"contentSize":"776px"}} -->
-<div class="wp-block-group alignfull">
-<!-- wp:post-featured-image  /-->
+
+<!-- wp:group {"align":"full","layout":{"contentSize":"776px"},"className":"gutena-post-theme-color gutena-post-hero-section"} -->
+<div class="wp-block-group alignfull gutena-post-theme-color gutena-post-hero-section">
+    <!-- wp:spacer {"height":"50px"} -->
+    <div style="height:50px" aria-hidden="true" class="wp-block-spacer"></div>
+    <!-- /wp:spacer -->
+    <!-- wp:group {"className":"gutena-post-feature-image-container","layout":{"contentSize":"776px"}} -->
+    <div class="wp-block-group gutena-post-feature-image-container">
+        <!-- wp:post-featured-image  /-->
+    </div>
+    <!-- /wp:group -->
 </div>
 <!-- /wp:group -->
 
