--- a/parts/main-default.html
+++ b/parts/main-default.html
@@ -1,1 +1,4 @@
+<!-- wp:group {"align":"full","style":{"spacing":{"padding":{"right":"20px","left":"20px"}}},"layout":{"inherit":true}} -->
+<div class="wp-block-group alignfull" style="padding-right:20px;padding-left:20px"><!-- wp:query-title {"type":"archive","level":4,"style":{"spacing":{"margin":{"top":"20px","bottom":"20px"}}}} /--></div>
+<!-- /wp:group -->
 <!-- wp:pattern {"slug":"gutena/query-default"} /-->
