--- a/parts/header.html
+++ b/parts/header.html
@@ -1,1 +1,5 @@
-<!-- wp:pattern {"slug":"gutena/header-with-button"} /-->
+<!-- wp:group {"layout":{"type":"constrained"}} -->
+<div class="wp-block-group">
+<!-- wp:pattern {"slug":"gutena/header-logo-nav-button"} /-->
+</div>
+<!-- /wp:group -->
